--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,19 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<!-- Add these keys for url_launcher support -->
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>tel</string>
+		<string>sms</string>
+		<string>mailto</string>
+	</array>
+	<!-- Optional: Add usage descriptions -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app requires access to the photo library to attach evidence to reports.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app requires access to the camera to capture evidence for reports.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app requires access to your location for emergency services and report context.</string>
 </dict>
 </plist>
